// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTooltip should render RichTooltip with header, content and footer 1`] = `
<span>
  <header
    className="theme-header tc-tooltip-header"
  >
    <div>
      Header
    </div>
  </header>
  <div
    className="theme-body tc-tooltip-body"
  >
    <div
      className="theme-content tc-tooltip-content"
    >
      <RichTooltipContent
        Content={
          <div>
            Content
          </div>
        }
        Footer={
          <div>
            Footer
          </div>
        }
        Header={
          <div>
            Header
          </div>
        }
      />
    </div>
  </div>
  <footer
    className="theme-footer tc-tooltip-footer"
  >
    <div>
      Footer
    </div>
  </footer>
</span>
`;

exports[`RichTooltip should render with a text in the body 1`] = `
<span>
  <header
    className="theme-header tc-tooltip-header"
  />
  <div
    className="theme-body tc-tooltip-body"
  >
    <div
      className="theme-content tc-tooltip-content"
    >
      <RichTooltipContent
        text="loreum"
      />
    </div>
  </div>
  <footer
    className="theme-footer tc-tooltip-footer"
  />
</span>
`;

exports[`RichTooltipContent should render RichTooltipContent with a content 1`] = `
<div>
  Content
</div>
`;

exports[`RichTooltipContent should render with a text in the body 1`] = `
<p>
  loreum
</p>
`;
